--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         }
     },
     "require": {
-        "hassankhan/config": "1.0.1"
+        "hassankhan/config": "1.0.1",
+        "zendframework/zend-diactoros": "1.8.0",
+        "aura/router": "3.1.0"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "3.3.0"
