--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
     "require": {
         "hassankhan/config": "1.0.1",
         "zendframework/zend-diactoros": "1.8.0",
-        "aura/router": "3.1.0"
+        "aura/router": "3.1.0",
+        "aura/session": "2.1.0",
+        "relay/relay": "1.1.0"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "3.3.0"
