--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "zendframework/zend-diactoros": "1.8.0",
         "aura/router": "3.1.0",
         "aura/session": "2.1.0",
-        "relay/relay": "1.1.0"
+        "relay/relay": "2.x@dev"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "3.3.0"
